--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -44,6 +44,7 @@
 
     @include onDesktop {
       padding-top: 56px;
+      overflow-x: visible;
     }
   }
 
@@ -69,6 +70,7 @@
   &__img {
     height: 410px;
     width: 280px;
+    @include hover (transform, scale(1.1));
 
     @include onTablet {
       height: 543px;
