--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,5 +1,6 @@
 .logo {
   display: block;
+  @include hover (transform, scale(1.2));
 
   &__header {
     margin: 0 auto;
@@ -14,7 +15,7 @@
     }
   }
 
-  // &__footer {
-
-  // }
+  &__img {
+    display: block;
+  }
 }
