--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,13 +7,23 @@
     gap: 38px;
   }
 
-  @include onSmall-desktop {
+  @include onDesktop {
     gap: 102px;
   }
 
   &--footer {
     display: block;
     grid-column: 1 / 3;
+
+    @include onTablet {
+      grid-column: 2 / 6;
+    }
+
+    font-size: 14px;
+
+    @include onDesktop {
+      grid-column: 8 / 12;
+    }
   }
 
   &__container {
@@ -24,8 +34,19 @@
       gap: 20px;
     }
 
-    @include onSmall-desktop {
+    @include onDesktop {
       gap: 60px;
+    }
+
+    &--footer {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 20px;
+      margin-bottom: 80px;
+
+      @include onTablet {
+        margin-bottom: 120px;
+      }
     }
   }
 
@@ -37,6 +58,10 @@
     @include onDesktop {
       row-gap: 30px;
     }
+
+    &--footer {
+      row-gap: 20px;
+    }
   }
 
   &__item {
@@ -45,8 +70,15 @@
     color: inherit;
     text-decoration: none;
 
-    @include onSmall-desktop {
+    @include onDesktop {
       font-size: 22px;
+    }
+
+    &--footer {
+      font-weight: 400;
+      margin: 0;
+      font-size: 14px;
+
     }
 
     &--galery {
@@ -65,7 +97,7 @@
         margin-bottom: 66px;
       }
 
-      @include onSmall-desktop {
+      @include onDesktop {
         margin-bottom: 50px;
       }
     }
@@ -73,6 +105,10 @@
     &--contacts {
       grid-column: 2 / 3;
       margin-bottom: 24px;
+
+      &--footer {
+        margin: 0;
+      }
     }
   }
 }
