--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,6 +8,10 @@
   scroll-behavior: smooth;
   background-color: #e5e5e5;
 
+  &:has(.page__burger:target) {
+    overflow: hidden;
+  }
+
   &__body {
     margin: 0;
   }
