--- a/src/styles/blocks/timetable.scss
+++ b/src/styles/blocks/timetable.scss
@@ -11,11 +11,32 @@
 
   &--footer {
     color: $title_color;
+    padding: 40px 0 0;
     grid-column: 1 / 2;
+
+    @include onTablet {
+      grid-column: 2 / 4;
+      flex-direction: column;
+      padding: 0;
+    }
+
+    @include onDesktop {
+      grid-column: 3 / 5;
+    }
   }
 
   &--contacts {
+    padding: 40px 0 0;
     grid-column: 2 / 3;
+
+    @include onTablet {
+      grid-column: 4 / 6;
+      padding: 0;
+    }
+
+    @include onDesktop {
+      grid-column: 5 / 7;
+    }
   }
 
   &__title {
@@ -33,10 +54,10 @@
   }
 
   &__container {
-    width: 158px;
+    // width: 158px;
   }
 
-  &__body {
+  &__info {
     @extend %font_timetable;
     margin: 20px 0 0;
 
