--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -9,11 +9,11 @@
     padding: 50px 0;
 
     @include onTablet {
-      padding: 50px 0;
+      padding: 50px 0 36px;
     }
 
     @include onDesktop {
-      padding: 50px 0;
+      padding: 46px 0 36px;
     }
   }
 
@@ -21,7 +21,6 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 20px;
-    row-gap: 40px;
 
     @include onTablet {
       grid-template-columns: repeat(6, 1fr);
@@ -38,11 +37,88 @@
     display: flex;
     justify-content: space-between;
     grid-column: 1 / -1;
+
+    @include onTablet {
+      flex-direction: column;
+      grid-column: 1 / 2;
+      gap: 62px;
+      justify-content: start;
+    }
   }
 
   &__icons {
     display: flex;
     gap: 20px;
     align-items: center;
+  }
+
+  &__on-top {
+    display: flex;
+    height: 50px;
+    grid-column: 1 / 3;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      display: none;
+    }
+  }
+
+  &__on-top-link {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border: 1px solid $green-color;
+    border-radius: 50%;
+    background-image: url(../images/icons/carbon.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &__line {
+    width: 100%;
+    height: 1px;
+    background-color: $green-color;
+    grid-column: 1 / 3;
+    opacity: 0.5;
+    margin-bottom: 40px;
+
+    @include onTablet {
+      grid-column: 2 / 6;
+      margin: 64px 0;
+    }
+
+    @include onDesktop {
+      grid-column: 7 / 8;
+      width: 1px;
+      height: 260px;
+      margin: 0 64px;
+    }
+  }
+
+  &__text {
+    @extend %font_timetable;
+    margin: 16px 0 0;
+
+    @include onTablet {
+      grid-column: 4 /5;
+
+      margin: 0;
+    }
+  }
+
+  &__footer {
+    grid-column: 1 / 3;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 20px;
+    margin-bottom: 10px;
+
+    @include onTablet {
+      display: flex;
+      grid-column: 1 / -1;
+      justify-content: space-between;
+    }
   }
 }
