complete event block

--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -1,8 +1,6 @@
 .exhibition {
-  display: block;
-
   @include onDesktop {
-    display: flex;
+    align-items: center;
   }
 
   &__img {
@@ -10,13 +8,13 @@
     height: 210px;
 
     @include onTablet {
-      width: 700px;
+      width: 100%;
       height: 520px;
     }
 
     @include onDesktop {
-      width: 670px;
-      height: 520px;
+      height: auto;
+      width: 100%;
     }
   }
 
@@ -35,6 +33,11 @@
   &__caption {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
+
+    @include onTablet {
+      justify-content: flex-start;
+    }
   }
 
   &__caption-tittle {
@@ -47,6 +50,8 @@
 
     @include onTablet {
       font-size: 14px;
+
+      margin-right: 40px;
     }
   }
 
@@ -93,7 +98,7 @@
         width: 15px;
         height: 15px;
 
-        margin: 8px 14px;
+        margin: 8px 5px;
       }
     }
   }
