--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -22,14 +22,38 @@
   }
 
   &__exhibition {
-    margin-top: 40px;
+    margin-top: 60px;
 
     @include onTablet {
-      margin-top: 48px;
+      margin-top: 64px;
     }
 
     @include onDesktop {
-      margin-top: 56px;
+      margin-top: 104px;
+    }
+
+    &--first_top_margin {
+      margin-top: 40px;
+
+      @include onTablet {
+        margin-top: 48px;
+      }
+
+      @include onDesktop {
+        margin-top: 56px;
+      }
+    }
+  }
+
+  &__lecture {
+    margin: 60px -20px;
+
+    @include onTablet {
+      margin: 112px 0;
+    }
+
+    @include onDesktop {
+      margin: 104px -55px;
     }
   }
 }
