--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -2,12 +2,13 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
+  margin-bottom: 200px;
 
   @media (min-width: 768px) {
     flex-direction: row-reverse;
     padding: 0 0 0 39px;
-    height: 100%;
+    margin-bottom: 30px;
   }
 
   @media (min-width: 1280px) {
@@ -136,6 +137,7 @@
     font-size: 45px;
     line-height: 100%;
     text-align: center;
+    margin-top: 10px;
     margin-bottom: 20px;
 
     @media (min-width: 768px) {
@@ -157,8 +159,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
 
-    @include size (230px, 50px);
+    @include size (280px, 50px);
     border: 1px solid $c-green;
 
     font-weight: 500;
@@ -187,7 +190,7 @@
       background-position: center;
       @include size (50px, 50px);
 
-      right: -50px;
+      right: 0;
 
       @media (min-width: 768px) {
         @include size (70px, 70px);
