--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -2,7 +2,6 @@
 @import "card";
 
 .events {
-
   &__title {
     grid-column: 1/3;
     font-weight: 700;
@@ -10,10 +9,12 @@
     line-height: 100%;
     text-align: center;
     width: 280px;
+    margin: 0 auto;
 
     @media (min-width: 768px) {
       grid-column: 1/8;
       font-size: 48px;
+      margin: 0;
       text-align: left;
       width: auto;
     }
