--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,7 @@ html {
 }
 
 .page {
+  background: $color-white;
   font-family: $font-family;
   font-style: $font-style;
   font-weight: 400;
@@ -11,7 +12,6 @@ html {
   color: $color-dark;
 
   &__body {
-    background: $color-white;
     &--hidden {
       overflow: hidden;
     }
@@ -27,8 +27,16 @@ html {
   }
 
   &__menu {
-    z-index: 2;
+    position: fixed;
+    background: #808080b3;
+    height: 100vh;
+    width: 100%;
     transform: translate(0, -100%);
     transition: opacity 0.3s ease, transform 0.3s ease;
+  }
+
+  &__body {
+    margin: 0;
+    overflow-x: hidden;
   }
 }
