--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./utils/normilize";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/form.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/button.scss";
+@import "./blocks/icons.scss";
+@import "./blocks/section.scss";
+
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/news.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
