--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -10,6 +10,7 @@
     text-align: center;
     width: 280px;
     margin: 0 auto;
+    margin-top: 40px;
 
     @media (min-width: 768px) {
       grid-column: 1/8;
