--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -30,7 +30,7 @@
   &__header {
     position: absolute;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 42% 58%;
 
     grid-column: 1/3;
     grid-row: 1;
@@ -39,11 +39,17 @@
     align-items: center;
     z-index: 2;
 
-    width: 60vw;
+    width: 100%;
     margin-bottom: 120px;
 
     @media (min-width: 768px) {
       padding: 15px 0 0;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 50vw;
+    }
+    @media (min-width: 1280px) {
+      padding: 15px 0 0;
+      gap: 8vw;
     }
   }
 
@@ -57,17 +63,16 @@
 
   &__logo {
     font-family: Montserrat, sans-serif;
-    @include size (200px, 72px);
-
+    @include size (100%, 72px);
+    grid-column-start: 2;
     font-weight: 700;
     font-size: 30px;
     line-height: 100%;
     color: #000;
     text-decoration: none;
-    text-align: center;
 
     @media (min-width: 768px) {
-      grid-column: 4/6;
+      grid-column: 2/3;
       @include size (63px, 72px);
       font-size: 36px;
     }
@@ -137,7 +142,6 @@
     font-size: 45px;
     line-height: 100%;
     text-align: center;
-    margin-top: 10px;
     margin-bottom: 20px;
 
     @media (min-width: 768px) {
