--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -46,10 +46,6 @@
     min-height: 210px;
     transition: transform $transition-timing ease-in-out;
 
-    &:hover {
-      @extend %hover-increase;
-    }
-
     @include onTablet() {
       padding-bottom: 40px;
       min-height: 520px;
@@ -59,6 +55,11 @@
       width: 670px;
       padding-bottom: 0;
       height: 520px;
+
+      &:hover {
+        transform: scale(105%);
+        cursor: pointer;
+      }
     }
 
     &--full-screen {
@@ -74,6 +75,11 @@
 
       @include onDesktop() {
         height: 550px;
+
+        &:hover {
+          transform: scale(105%);
+          cursor: pointer;
+        }
       }
     }
   }
