--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -7,7 +7,6 @@
       flex-direction: column;
       gap: 30px;
     }
-
   }
 
   &__photo-row {
@@ -15,23 +14,30 @@
     justify-content: space-between;
     gap: 30px;
     height: 100%;
+    cursor: pointer;
   }
 
   &__long-photo {
     width: 33.33%;
-    transition: transform $transition-timing ease-in-out;
 
-    &:hover {
-      @extend %hover-increase;
+    @include onDesktop {
+      transition: transform $transition-timing ease-in-out;
+      cursor: pointer;
+      &:hover {
+        transform: scale(105%);
+      }
     }
   }
 
   &__broad-photo {
     width: 66.66%;
-    transition: transform $transition-timing ease-in-out;
 
-    &:hover {
-      @extend %hover-increase;
+    @include onDesktop {
+      transition: transform $transition-timing ease-in-out;
+      cursor: pointer;
+      &:hover {
+        transform: scale(105%);
+      }
     }
   }
 }
