--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -6,6 +6,11 @@
   background-position: center;
   background-repeat: no-repeat;
 
+  &:hover {
+    filter: invert(36%) sepia(60%) saturate(2207%) hue-rotate(345deg)
+      brightness(95%) contrast(99%);
+  }
+
   &--menu {
     background-image: url(../images/menu-button.svg);
   }
