fixed menu pseudoelement space between sections button size footer

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -49,6 +49,7 @@
                 top: 7px;
                 display: block;
                 height: 1px;
+                left: -7px;
                 width: 70px;
                 transform: translate(-100%, -50%);
                 background-color: $color-green;
