--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -19,11 +19,11 @@
     }
 
     &--facebook {
-        flex-shrink: 0;
-        background-image: url("../images/Facebook.png");
+
+        background-image: url("../images/facebook.jpg");
     }
 
     &--instagram {
-        background-image: url("../images/Vector.png");
+        background-image: url("../images/instagram-logo.svg");
     }
 }
