--- a/src/styles/blocks/news.scss
+++ b/src/styles/blocks/news.scss
@@ -1,6 +1,6 @@
 .news {
     font-family: "IBM Plex Sans", sans-serif;
-    &__content {
+    &__container {
         margin-bottom: 60px;
 
         @include onTablet {
@@ -38,6 +38,19 @@
         }
     }
 
+    &__image-container {
+        margin-bottom: 16px;
+        overflow: hidden;
+
+        @include onTablet {
+            margin-bottom: 40px;
+        }
+
+        @include onDesktop {
+            margin-bottom: 0;
+        }
+    }
+
     &__info {
         display: flex;
         flex-direction: column;
@@ -61,6 +74,18 @@
         font-size: 16px;
         line-height: 100%;
         color: rgb(104, 116, 128);
+
+        @include onTablet {
+            font-size: 14px;
+            margin-right: 20px;
+        }
+    }
+
+    &__time {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        color: $color-green;
 
         @include onTablet {
             font-size: 14px;
