--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -84,6 +84,7 @@
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(2, min-content);
             justify-content: center;
+            align-items: start;
             gap: 20px;
 
             margin-bottom: 80px;
