--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -7,7 +7,7 @@
     @include onTablet {
         flex-direction: column;
         justify-content: start;
-        align-items: center;
+        align-items: start;
         margin-bottom: 0;
     }
 
@@ -26,6 +26,10 @@
 
     &__icon {
         margin-right: 20px;
+
+        @include onTablet {
+            margin-right: 32px;
+        }
     
     
     &:last-child {
