--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -10,6 +10,10 @@
         height: 72px;
     }
 
+    @include onDesktop {
+        width: 170px;
+    }
+
     &__image {
         display: inline-block;
         object-fit: contain;
