--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -39,7 +39,7 @@
     }
 
     &__list-nav {
-        display: inline-block;
+        display: inline-grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, min-content);
         justify-content: center;
@@ -70,6 +70,13 @@
         font-size: 14px;
         line-height: 20px;
         color: inherit;
+    }
+
+    &__subtitle {
+        font-size: 14px;
+        line-height: 20px;
+        color: inherit;
+        margin-bottom: 20px;
     }
 
     &__work-time-wrapper {
