--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -33,6 +33,7 @@
 
         &::after {
             content: "";
+            position: fixed;
             left: 0;
             right: 0;
             z-index: 1;
