--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -37,6 +37,7 @@
     &__paragraph {
         font-family: "IBM Plex Sans", sans-serif;
         font-weight: 400;
+        font-size: 18px;
         line-height: 150%;
         text-align: center;
         color: $color-white;
