fixed menu pseudoelement space between sections button size footer

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -19,8 +19,8 @@
     }
 
     &--facebook {
-
-        background-image: url("../images/facebook.jpg");
+        
+        background-image: url("../images/Group.png");
     }
 
     &--instagram {
