--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -46,14 +46,14 @@
   }
 
   &__lecture {
-    margin: 60px -20px;
+    margin: 60px -20px 0;
 
     @include onTablet {
-      margin: 112px 0;
+      margin: 112px 0 0;
     }
 
     @include onDesktop {
-      margin: 104px -55px;
+      margin: 104px -55px 0;
     }
   }
 }
