--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,8 @@
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
 
 h1 {
   margin: 0;
