--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -31,12 +31,16 @@ html {
     background: #808080b3;
     height: 100vh;
     width: 100%;
+
     transform: translate(0, -100%);
     transition: opacity 0.3s ease, transform 0.3s ease;
   }
 
   &__body {
     margin: 0;
-    overflow-x: hidden;
+    
+    &--with-menu {
+      overflow: hidden;
+    }
   }
 }
