fix gallery and containers

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -29,7 +29,6 @@
 
     @include onTablet {
       background-size: cover;
-      background-position: top left;
     }
   }
 
@@ -58,7 +57,7 @@
   .swiper-pagination-bullet {
     width: 9px;
     height: 9px;
-    background-color: #e0e0e0;
+    background-color: $paginationBulletColor;
     margin: 0 !important;
     opacity: 1;
   }
