--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -1,8 +1,14 @@
 .top-actions {
   position: absolute;
   top: 32px;
+  left: 20px;
 
   @include onTablet {
     top: 40px;
+    left: 34px;
+  }
+
+  @include onDesktop {
+    left: 56px;
   }
 }
