--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,13 +1,17 @@
 .container {
   box-sizing: border-box;
 
+  margin: 0 auto;
   padding: 0 20px;
+  max-width: 320px;
 
   @include onTablet {
-    padding-left: 34px;
+    padding: 0 34px;
+    max-width: 744px;
   }
 
   @include onDesktop {
-    padding-left: 56px;
+    padding: 0 56px;
+    max-width: 1260px;
   }
 }
