--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -108,6 +108,11 @@
     color: #687480;
     cursor: pointer;
 
+    &:focus {
+      font-weight: 600;
+      font-size: 18px;
+    }
+
     @include smartphone {
       height: 69px;
     }
