--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  position: relative;
   &__container {
     @include gridPage;
   }
@@ -86,6 +87,7 @@
   }
 
   &__contacts {
+
     @include smartphone {
       grid-row: 1;
       grid-column: 4 / 6;
@@ -97,7 +99,7 @@
     }
   }
 
-  &__description {
+  &__weekend {
     font-family: $font-family;
     font-style: $font-style;
     font-weight: 400;
@@ -106,34 +108,33 @@
 
     color: $color-dark;
     margin-top: 30px;
+  }
+
+  &__description  {
+    font-family: $font-family;
+    font-style: $font-style;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140.62%;
+
+    color: $color-dark;
 
     &:hover {
-      font-weight: bold;
-    }
-
-    @include smalldesktop {
-      &--weekend {
-        font-family: $font-family;
-        font-style: $font-style;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 150%;
-        color: $color-dark;
-      }
+      text-decoration: underline;
     }
   }
 
   &__icon-bottom {
-    grid-column: 2 / -1;
-    width: 50px;
-    height: 50px;
+    position: absolute;
+    bottom: 250px;
+    right: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 50px;
+    height: 50px;
     border: 1px solid $color-green;
     border-radius: 50%;
-    margin-left: 80px;
-    margin-bottom: 20px;
 
     @include smartphone {
       display: none;
@@ -206,7 +207,7 @@
     grid-column: 1 / -1;
 
     &:hover {
-      font-weight: bold;
+      text-decoration: underline;
     }
 
     @include smalldesktop {
