add subscribe block with styles

--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -7,6 +7,8 @@
     width: 280px;
     height: 210px;
 
+    transition: transform 0.3s;
+
     @include onTablet {
       width: 100%;
       height: 520px;
@@ -15,6 +17,10 @@
     @include onDesktop {
       height: auto;
       width: 100%;
+    }
+
+    &:hover {
+      transform: scale(1.05);
     }
   }
 
@@ -69,7 +75,6 @@
 
     margin: 15px 0 0;
 
-    color: $mainTextColor;
     font-size: 28px;
     font-weight: 500;
     font-family: "Montserrat", sans-serif;
@@ -101,6 +106,16 @@
         margin: 8px 5px;
       }
     }
+
+    &:hover::after {
+      background-color: $mainGreenColor;
+    }
+  }
+
+  &__link {
+    color: $mainTextColor;
+    text-decoration: none;
+
   }
 
   &__description {
