--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,16 +1,8 @@
 .gallery {
-  margin-top: 184px;
-
-  @include onTablet {
-    margin-top: 208px;
-  }
-
-  @include onDesktop {
-    margin-top: 302px;
-  }
-
   &__tittle {
     margin: 0;
+
+    padding-top: 83px;
 
     color: $mainTextColor;
     font-size: 36px;
@@ -20,8 +12,14 @@
     text-align: center;
 
     @include onTablet {
+      padding-top: 120px;
+
       font-size: 48px;
       text-align: left;
+    }
+
+    @include onDesktop {
+      padding-top: 102px;
     }
   }
 
