--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -50,6 +50,8 @@
 
     padding-top: 9px;
 
+    transition: color $animationDuration;
+
     @include onTablet {
       left: 110px;
 
@@ -58,6 +60,10 @@
 
     @include onDesktop {
       left: 85px;
+    }
+
+    &:hover {
+      color: $mainGreenColor;
     }
   }
 
