--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,6 +1,6 @@
 .events {
   &__tittle {
-    margin: 70px 0 0;
+    margin: 0;
 
     color: $mainTextColor;
     text-align: center;
@@ -10,14 +10,8 @@
     line-height: 100%;
 
     @include onTablet {
-      margin-top: 88px;
-
       text-align: left;
       font-size: 48px;
-    }
-
-    @include onDesktop {
-      margin-top: 200px;
     }
   }
 
@@ -46,14 +40,14 @@
   }
 
   &__lecture {
-    margin: 60px 0 0;
+    margin: 60px 0;
 
     @include onTablet {
-      margin: 112px 0 0;
+      margin: 112px 0;
     }
 
     @include onDesktop {
-      margin: 104px -55px 0;
+      margin: 104px 0;
     }
   }
 }
