--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -18,7 +18,6 @@
   &__content {
     box-sizing: border-box;
 
-    
   }
 
   &__menu {
@@ -35,6 +34,18 @@
       transform: translateY(0);
 
       box-shadow: 0 0 0 9999px rgba(0,0,0, 0.3);
+    }
+  }
+
+  &__section {
+    margin: 80px 0 0;
+
+    @include onTablet {
+      margin: 88px 0 0;
+    }
+
+    @include onDesktop {
+      margin: 200px 0 0;
     }
   }
 }
