--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@
 @import "./blocks/lecture.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/slider.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/form.scss";
 
 h1 {
   margin: 0;
