--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import "./blocks/slider.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/form.scss";
+@import "./blocks/footer.scss";
 
 h1 {
   margin: 0;
