add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -173,7 +173,6 @@
     font-weight: 600;
     font-size: 18px;
     letter-spacing: 0.05em;
-    overflow: hidden;
     background-image: url("../images/greenerr.jpg");
     background-repeat: no-repeat;
     background-position: right;
@@ -183,15 +182,18 @@
     z-index: 1;
     transition: 0.5s;
     transition-delay: 0.6s;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
 
     span {
       position: absolute;
       width: 25%;
       height: 100%;
-      background-color: var(--c);
+      background-color: inherit;
       transform: translateY(150%);
       border-radius: 40%;
-      left: calc((var(--n) - 1) * 20%);
+      left: calc((var(--n) - 1) * 23%);
       transition: 0.5s;
       transition-delay: calc((var(--n) - 1) * 0.1s);
       z-index: -1;
@@ -202,21 +204,26 @@
 
       span {
         transform: translateY(0) scale(2);
+        background-color: var(--c);
       }
       span:nth-child(1) {
         --n: 1;
+        background-color: var(--c);
       }
 
       span:nth-child(2) {
         --n: 2;
+        background-color: var(--c);
       }
 
       span:nth-child(3) {
         --n: 3;
+        background-color: var(--c);
       }
 
       span:nth-child(4) {
         --n: 4;
+        background-color: var(--c);
       }
     }
 
