--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -39,20 +39,25 @@
 
   &__image-max-1 {
     grid-column: 1 / 5;
+    cursor: pointer;
   }
   &__image-max-2 {
     grid-column: 5 / 13;
+    cursor: pointer;
   }
   &__image-max-3 {
     grid-column: 1 / 9;
+    cursor: pointer;
   }
   &__image-max-4 {
     grid-column: 9 / 13;
+    cursor: pointer;
   }
 
   &__image-size {
     width: 100%;
     height: auto;
+    cursor: pointer;
   }
 }
 
