--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
+@import "blocks/mixins.scss";
 @import "fonts";
 @import "typography";
+@import "blocks/header.scss";
+@import "blocks/menu.scss";
+
+@import "blocks/overlay.scss";
+@import "blocks/grid.scss";
+@import "blocks/ivent.scss";
 
 body {
-  background: $c-gray;
+ 
+  margin: 0;
+}
+
+html {
+  margin: 0;
 }
