add task solution

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -85,6 +85,12 @@
   }
   &__list-item {
     margin-bottom: 20px;
+    transition: all 0.2s;
+    &:hover {
+      color: #1a5a4c;
+      font-weight: 400;
+      text-shadow: gray 1px 0 10px;
+    }
   }
   &__list-second {
     grid-column: 2 / 3;
@@ -184,5 +190,14 @@
     font-size: 14px;
     line-height: 150%;
     color: #0f0e08;
+  }
+
+  &__item-contact {
+    transition: all 0.2s;
+    &:hover {
+      color: #1a5a4c;
+      font-weight: 400;
+      text-shadow: gray 1px 0 10px;
+    }
   }
 }
