--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -89,6 +89,10 @@
       color: #687480;
     }
 
+    &:-webkit-autofill {
+      transition: background-color 9999s ease-in-out 0s;
+    }
+
     @include onTablet {
       height: 70px;
       width: calc(100% - 116px);
