add task solution

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -200,4 +200,12 @@
       text-shadow: gray 1px 0 10px;
     }
   }
+
+  &__image {
+    transition: all 0.3s;
+  }
+
+  &__image:hover {
+    scale: 1.4;
+  }
 }
