--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -58,6 +58,11 @@
     width: 100%;
     height: auto;
     cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      scale: 1.01;
+    }
   }
 }
 
