implement header and side menu

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,19 @@
-h1 {
-  @extend %h1;
+.text-normal {
+  @extend %text-normal;
+}
+
+.text-normal-semibold {
+  @extend %text-normal-semibold;
+}
+
+.text-normal-bold {
+  @extend %text-normal-bold;
+}
+
+.header-1 {
+  @extend %header-1;
+}
+
+.logo {
+  @extend %logo;
 }
