--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,10 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+//blocks
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/icon";
+@import "blocks/menu";
+@import "blocks/nav";
+@import "blocks/button";
