--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,58 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%header-1 {
+  color: $c-black;
+  font-size: 45px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  text-align: center;
+
+  text-transform: uppercase;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 120%;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+  }
+}
+
+%text-normal {
+  color: $c-white;
+  font-size: 14px;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
   font-weight: 400;
+  line-height: 150%;
+}
+
+%text-normal-semibold {
+  font-size: 16px;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+}
+
+%text-normal-bold {
+  color: $c-white;
+  font-size: 14px;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+}
+
+%logo {
+  color: $c-black;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
 }
