--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,7 +1,14 @@
+%montserrat {
+  font-family: "Montserrat", sans-serif;
+}
+
+%ibmPlexSans {
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
 %header-1 {
   color: $c-black;
   font-size: 45px;
-  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
