add js animation to menu button

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -2,28 +2,15 @@
   grid-column: 1 / span 2;
 
   @include onTablet {
-    grid-column: 2 / 5;
-    margin-inline: -30px;
+    grid-column: 1 / span 2;
+    grid-row: 4;
+    margin-right: -60px;
   }
 
   @include onDesktop {
     grid-column: 3 / span 3;
     grid-row: 5;
     margin: 0;
-  }
-
-  &--aling--left {
-
-    @include onTablet {
-      grid-column: 1 / span 2;
-      margin-left: 0;
-      margin-right: -50px;
-    }
-
-    @include onDesktop {
-      grid-column: 3 / span 3;
-      margin: 0;
-    }
   }
 
   &__link {
