--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,9 +5,13 @@
   z-index: 1;
   background-color: rgba($color: $c-black, $alpha: 0.5);
 
+
+
   &__wrapper {
     background-color: $c-green;
     padding-block: 27px;
+    display: flex;
+    justify-content: center;
   }
 
   &__content {
