implement events block / add nav animation

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,17 +1,39 @@
+.text-tiny {
+  @extend %text-tiny;
+  @extend %ibmPlexSans;
+}
 .text-normal {
   @extend %text-normal;
+  @extend %ibmPlexSans;
 }
 
 .text-normal-semibold {
   @extend %text-normal-semibold;
+  @extend %ibmPlexSans;
 }
 
 .text-normal-bold {
+  @extend %ibmPlexSans;
   @extend %text-normal-bold;
+}
+
+.text-hard-bold {
+  @extend %ibmPlexSans;
+  @extend %text-hard-bold;
 }
 
 .header-1 {
   @extend %header-1;
+  @extend %montserrat;
+}
+
+.header-2 {
+  @extend %header-2;
+  @extend %montserrat;
+}
+
+.header-3 {
+  @extend %header-3;
   @extend %montserrat;
 }
 
