--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,6 +9,11 @@
 
   &__body {
     overflow-x: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
   }
