--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -27,10 +27,42 @@
   }
 }
 
+%header-2 {
+  color: $c-black;
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 48px;
+  }
+}
+
+%header-3 {
+  color: $c-black;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+%text-tiny {
+  color: $c-dark-gray;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 150%;
+}
+
 %text-normal {
   color: $c-white;
   font-size: 14px;
-  font-family: "IBM Plex Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
@@ -38,7 +70,6 @@
 
 %text-normal-semibold {
   font-size: 16px;
-  font-family: "IBM Plex Sans", sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
@@ -47,9 +78,15 @@
 %text-normal-bold {
   color: $c-white;
   font-size: 14px;
-  font-family: "IBM Plex Sans", sans-serif;
   font-style: normal;
   font-weight: 600;
+  line-height: 150%;
+}
+
+%text-hard-bold {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
   line-height: 150%;
 }
 
