--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -60,4 +60,8 @@
     --columns: 12;
     grid-template-columns: repeat(var(--columns), 70px);
   }
+
+  @include onDesign {
+    grid-template-columns: repeat(var(--columns), 1fr);
+  }
 }
