--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,7 @@ $c-white: #fff;
 $c-dark-gray: #4e4e4e;
 $c-black: #0f0e08;
 $c-green: #1a5a4c;
+$c-red: #f14a27;
 
 // old project vars
 $c-beige: #e4dfd3;
