--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -32,46 +32,51 @@
     background-color: $c-black;
     position: absolute;
     border-radius: 2px;
-    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
-    width:100%;
-    height: 2px;
+    transition: $transition-speed cubic-bezier(0.8, 0.5, 0.2, 1.4);
+    width: 100%;
+    height: 10%;
     transition-duration: $transition-speed;
+    overflow: visible;
 
     &--order--1 {
-      top:0px;
-      left: 0px;
+      top: 0;
+      left: 0;
     }
     &--order--2 {
-      top:48%;
-      left: 0px;
+      top: 48%;
+      left: 0;
     }
     &--order--3 {
-      bottom:2px;
-      left: 0px;
+      bottom: 0px;
+      left: 0;
     }
-
-  }
-  &:not(.open):hover &__line--order--1 {
-    transform: rotate(-3deg) scaleY(1.1);
-  }
-  &:not(.open):hover &__line--order--2 {
-    transform: rotate(3deg) scaleY(1.1);
-  }
-  &:not(.open):hover &__line--order--3 {
-    transform: rotate(-4deg) scaleY(1.1);
   }
 
-  &.open &__line--order--1{
+  &.open &__line--order--1 {
     transform: rotate(45deg);
     top: 13px;
     background-color: $c-white;
   }
-  &.open &__line--order--2{
-    opacity:0;
+
+  &.open &__line--order--2 {
+    opacity: 0;
   }
-  &.open &__line--order--3{
+
+  &.open &__line--order--3 {
     transform: rotate(-45deg);
     top: 13px;
     background-color: $c-white;
+  }
+
+  &:not(.open):hover &__line--order--1 {
+    transform: rotate(-3deg) scaleY(1.1);
+  }
+
+  &:not(.open):hover &__line--order--2 {
+    transform: rotate(3deg) scaleY(1.1);
+  }
+
+  &:not(.open):hover &__line--order--3 {
+    transform: rotate(-4deg) scaleY(1.1);
   }
 }
