--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -22,6 +22,10 @@
     @include onTablet {
       grid-column: span 4;
     }
+
+    @include onDesktop {
+      grid-column: span 5;
+    }
   }
 }
 
@@ -85,8 +89,12 @@
 
     transition: all, $transition-speed;
     //
-    -webkit-mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,.2) 50%,#000 75%);
-    mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,.2) 50%,#000 75%);
+    -webkit-mask-image: linear-gradient(
+      45deg,
+      #000 25%,
+      rgba(0,0,0,0.2) 50%,
+      #000 75%);
+    mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,0.2) 50%,#000 75%);
     -webkit-mask-size: 800%;
     mask-size: 800%;
     -webkit-mask-position: 0;
@@ -94,7 +102,7 @@
     //
     &:hover {
       // transform: scale(1.2);
-      transition: mask-position 2s ease,-webkit-mask-position 2s ease;
+      transition: mask-position 2s ease, -webkit-mask-position 2s ease;
       -webkit-mask-position: 120%;
       mask-position: 120%;
       opacity: 1;
@@ -103,7 +111,6 @@
     &--type--lecture {
       width: 100vw;
       margin-inline: -20px;
-
 
       @include onTablet {
         width: 100%;
