add some blocks

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$main-font: "IBM Plex Sans", sans-serif;
+$title-font: "Montserrat", sans-serif;
+$title-color: #0f0e08;
+$green-color: #1a5a4c;
+$gray-color: #687480;
+$nav-font-color: #fff;
+$text-color: #4e4e4e;
