add final footer layout

--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -99,6 +99,8 @@
       height: 10px;
       background-color: $decorativeColor;
 
+      transition: background-color $animationDuration;
+
       @include onTablet {
         width: 15px;
         height: 15px;
