--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -112,4 +112,110 @@
       color: $decorativeColor;
     }
   }
+
+  &__go-top {
+    @include square(50px);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: end;
+
+    border: 1px solid $mainGreenColor;
+    border-radius: 50%;
+
+    @include onTablet {
+      display: none;
+    }
+  }
+
+  &__splitter {
+    margin-top: 20px;
+
+    height: 1px;
+    width: 100%;
+
+    background-color: $mainGreenColor;
+
+    @include onTablet {
+      margin-top: 64px;
+    }
+
+    @include onDesktop {
+      justify-self: center;
+
+      margin-top: 0;
+
+      width: 1px;
+      height: 100%;
+    }
+  }
+
+  &__nav {
+    margin-top: 20px;
+
+    @include onDesktop {
+      margin-top: 0;
+    }
+  }
+
+  &__link {
+    display: inline-block;
+
+    margin-bottom: 20px;
+
+    width: 135px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    text-decoration: none;
+    color: $mainTextColor;
+
+    transition: color $animationDuration;
+
+    &:hover {
+      color: $decorativeColor;
+    }
+  }
+
+  &__signs {
+    display: block;
+
+    @include onTablet {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+    }
+  }
+
+  &__author {
+    margin: 80px 0 0;
+
+    text-align: center;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 140%;
+
+    @include onTablet {
+      margin: 120px 0 36px;
+
+      text-align: left;
+    }
+  }
+
+  &__copyright {
+    margin: 10px 0 56px;
+
+    text-align: center;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 140%;
+
+    @include onTablet {
+      margin: 120px 0 36px;
+
+      text-align: left;
+    }
+  }
 }
