--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -19,6 +19,8 @@
   }
 
   &__content {
+    @include hover (box-shadow, 2px 2px 10px $mainGreenColor);
+
     box-sizing: border-box;
 
     width: 280px;
@@ -85,5 +87,15 @@
       line-height: 100%;
       text-align: left;
     }
+  }
+
+  &__link {
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    text-decoration: none;
+    color: $mainTextColor;
   }
 }
