--- a/src/styles/blocks/event-lecture.scss
+++ b/src/styles/blocks/event-lecture.scss
@@ -36,7 +36,7 @@
   &__poster {
     height: 140px;
 
-    background: #fff;
+    background: $nav-font-color;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
     position: absolute;
