add fix to header bg layout

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -90,6 +90,8 @@
     @include onDesktop {
       grid-row: 1 / span 6;
       grid-column: 6 / span 7;
+      width: 110%;
+      height: auto;
     }
   }
 }
