add hover effects and actual links for social

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -29,6 +29,12 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+
+    transition: background-image $animationDuration;
+
+    &:hover {
+      background-image: url(../images/icons/facebook_hover.svg);
+    }
   }
 
   &__inst {
@@ -43,12 +49,19 @@
     background-position: center;
     background-size: contain;
 
+    transition-property: background-image;
+    transition-duration: $animationDuration;
+
     @include onTablet {
       margin-left: 32px;
     }
 
     @include onDesktop {
       margin-left: 5px;
+    }
+
+    &:hover {
+      background-image: url(../images/icons/instagram_hover.svg);
     }
   }
 
