fix layout indents

--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -4,18 +4,15 @@
   }
 
   &__img {
-    width: 280px;
-    height: 210px;
+    width: 100%;
 
     transition: transform 0.3s;
 
     @include onTablet {
       width: 100%;
-      height: 520px;
     }
 
     @include onDesktop {
-      height: auto;
       width: 100%;
     }
 
