--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -165,7 +165,11 @@
   }
 
   &__nav {
+    display: flex;
+    flex-wrap: wrap;
     margin-top: 20px;
+    max-width: 300px;
+    height: fit-content;
 
     @include onDesktop {
       margin-top: 0;
@@ -176,8 +180,9 @@
     display: inline-block;
 
     margin-bottom: 20px;
+    margin-right: 20px;
 
-    width: 135px;
+    width: 110px;
 
     font-weight: 400;
     font-size: 14px;
