--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -26,6 +26,7 @@
 
   &__slide-1 {
     background-image: url(../images/gallery/gallery_foto_1.jpg);
+    background-repeat: no-repeat;
 
     @include onTablet {
       background-size: cover;
