fixed code and add blocks

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -63,11 +63,15 @@
   }
 
   &__order-tickets {
+    text-decoration: none;
+
     max-width: 500px;
     margin: 0 auto;
 
     display: flex;
     justify-content: space-between;
+
+    @include hover(box-shadow, 0 0 10px $green-color inset);
 
     @include onTablet {
       height: 70px;
