--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,8 @@
 
 @import "./blocks/gallery";
 @import "./blocks/slider";
+
+@import "./blocks/subscription";
+
+@import "./blocks/footer";
+@import "./blocks/timetable";
