--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -16,6 +16,34 @@
 
   &--header {
     max-width: 100%;
+
+    @include onDesktop {
+      &::before {
+        content: "події";
+        color: #687480;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+
+        position: absolute;
+        left: 45px;
+        bottom: 50px;
+
+        transform: rotate(90deg);
+      }
+
+      &::after {
+        content: "";
+        background-color: #687480;
+        width: 1px;
+        height: 70px;
+
+        display: inline-block;
+        position: absolute;
+        left: 65px;
+        bottom: -50px;
+      }
+    }
   }
 
   &--nav {
@@ -28,7 +56,7 @@
     @include onTablet {
       padding: 40px 35px;
 
-      max-height: 225px;
+      min-height: 225px;
 
       display: flex;
     }
@@ -50,5 +78,24 @@
 
   &--events {
     padding-top: 0;
+  }
+
+  &--subscription {
+    padding-top: 0;
+  }
+
+  &--footer {
+    padding-top: 0;
+
+    @include onTablet {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      column-gap: 20px;
+    }
+
+    @include onDesktop {
+      grid-template-columns: repeat(12, 1fr);
+      column-gap: 30px;
+    }
   }
 }
