--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -27,5 +27,9 @@ h3 {
     @include onTablet {
       margin-bottom: 90px;
     }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
   }
 }
