--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -67,6 +67,8 @@
 
     padding-left: 24px;
 
+    cursor: pointer;
+
     @include onTablet {
       height: 70px;
       width: 365px;
@@ -84,6 +86,8 @@
       line-height: 100%;
     }
 
+    @include hover(box-shadow, 0 0 7px #fff);
+
     &:focus {
       box-shadow: 0 0 5px inset;
     }
@@ -99,6 +103,8 @@
     background-position: center;
 
     border: none;
+
+    cursor: pointer;
 
     @include onTablet {
       width: 70px;
