--- a/src/styles/blocks/event-lecture.scss
+++ b/src/styles/blocks/event-lecture.scss
@@ -53,9 +53,13 @@
       right: 100px;
 
       height: 210px;
-      padding: 45px 55px;
+      padding: 45px 25px;
 
       justify-content: space-between;
+    }
+
+    @media (min-width: 700px) {
+      padding: 45px 55px;
     }
 
     @include onDesktop {
