--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -11,7 +11,7 @@
   &__content {
     display: none;
 
-    @include onDesktop {
+    @media (min-width: 1024px) {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       gap: 30px;
