--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,15 +1,17 @@
 .schedule {
+
   color: $nav-font-color;
 
   @include onTablet {
-    display: flex;
-    width: 55%;
-
-    align-items: end;
-
     position: relative;
 
     border-left: 2px solid rgba(255, 255, 255, 0.5);
+  }
+
+  @media (min-width: 700px) {
+    display: flex;
+
+    align-items: end;
   }
 
   &__title {
@@ -38,7 +40,10 @@
 
     @include onTablet {
       width: 160px;
-      margin-left: 40px;
+      margin: 40px 0 20px 40px;
+    }
+
+    @media (min-width: 700px) {
       margin-bottom: 0;
     }
 
