--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -59,7 +59,13 @@
     margin-bottom: 10px;
 
     @include onTablet {
+      grid-column: span 3;
+
       margin-bottom: 32px;
+    }
+
+    @media (min-width: 750px) {
+      grid-column: span 2;
     }
 
     @include onDesktop {
