--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -180,6 +180,8 @@
   }
 
   &__nav-link {
+    width: max-content;
+
     display: block;
     text-decoration: none;
 
@@ -203,7 +205,7 @@
 
       position: absolute;
       left: 0;
-      bottom: -10px;
+      bottom: -8px;
 
       opacity: 0;
       transition: opacity 0.3s;
