--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,6 +1,6 @@
 .slider {
 
-  @include onDesktop {
+  @media (min-width: 1024px) {
     display: none;
   }
 
@@ -18,6 +18,10 @@
   &__picture-box {
     grid-column: span 2;
 
+    @media (min-width: 400px) {
+      grid-column: span 1;
+    }
+
     margin-bottom: 20px;
 
     @include onTablet {
@@ -29,9 +33,11 @@
     &--hidden {
       display: none;
 
-      @include onTablet {
+      @media (min-width: 400px) {
         display: block;
+      }
 
+      @include onTablet {
         grid-column: 4 / 7;
       }
     }
