add mobile/tablet version of galery block

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -22,3 +22,11 @@ $tablet-min-width: 640px; // - Tablet 640px
 $mobile-min-width: 320px; // - Mobile (> 320px)
 
 $transition-speed: 0.3s;
+
+// swiper vars
+
+$themeColor: #007aff !default;
+$colors: (
+  "white": #fff,
+  "black": #000,
+) !default;
