--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,5 @@
 .page {
-  scroll-behavior: smooth;
-  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth !important;
   font-size: 16px;
 
   &:has(.page__menu:target) {
