--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -50,6 +50,27 @@
 .slide-image {
   width: 100%;
   height: 410px;
+
+  transition: all, $transition-speed;
+    //
+    -webkit-mask-image: linear-gradient(
+      45deg,
+      #000 25%,
+      rgba(0,0,0,0.2) 50%,
+      #000 75%);
+    mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,0.2) 50%,#000 75%);
+    -webkit-mask-size: 800%;
+    mask-size: 800%;
+    -webkit-mask-position: 0;
+    mask-position: 0;
+    //
+    &:hover {
+      // transform: scale(1.2);
+      transition: mask-position 2s ease, -webkit-mask-position 2s ease;
+      -webkit-mask-position: 120%;
+      mask-position: 120%;
+      opacity: 1;
+    }
 }
 
 // #region pagination
