--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -12,10 +12,14 @@
     background-size: 48% 384px;
   }
 
+  @media (min-width: 900px) {
+    background-image: url(../images/background/bg-desktop.jpg);
+    background-size: 48% 100%;
+  }
+
   @include onDesktop {
     height: 655px;
 
-    background-image: url(../images/background/bg-desktop.jpg);
     background-size: 55% 100%;
   }
 
