--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -18,6 +18,8 @@
   &__picture-box {
     grid-column: span 2;
 
+    @include hover(transform, scale(1.1));
+
     @media (min-width: 400px) {
       grid-column: span 1;
     }
