--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,5 +11,5 @@
 @import "blocks/button";
 @import "blocks/event";
 @import "blocks/main";
-@import "blocks/slider";
+@import "blocks/gallery";
 @import "blocks/swiper";
