add fix to lecture image layout

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -55,6 +55,12 @@
 
     &--type--lecture {
       overflow: visible;
+
+      @include onDesign {
+        overflow: hidden;
+        grid-column: 1 / -1;
+        padding-bottom: 65%;
+      }
     }
   }
 
@@ -124,9 +130,8 @@
 
       @include onDesign {
         max-width: $design-min-width;
-        top: 0;
-        left: -25%;
-        right: 0;
+        width: 100%;
+        margin: 0;
       }
     }
   }
