add subscribe form

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -36,12 +36,18 @@
       background-color: $c-green;
       transition: all, $transition-speed;
 
+      appearance: none;
+
       height: 50px;
       width: 50px;
 
       @include onTablet {
         height: 70px;
         width: 70px;
+      }
+
+      &--color--red {
+        background-color: $c-red;
       }
     }
 
