--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -16,6 +16,10 @@
   &--arrow {
     background-image: url(../images/svg_images/arrow_right_white.svg);
 
+    &--color--black {
+      background-image: url(../images/svg_images/arrow_right_black.svg);
+    }
+
     &:hover {
       background-image: url(../images/svg_images/arrow_right_green.svg);
     }
