--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -52,6 +52,18 @@
   }
 }
 
+%header-4 {
+  color: $c-white;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+
+  @include onTablet {
+    line-height: 100%;
+  }
+}
+
 %text-tiny {
   color: $c-dark-gray;
   font-size: 16px;
