--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -65,6 +65,11 @@
     border: none;
     outline: none;
 
+    color: #687480;
+    font-size: 14px;
+    font-family: $title-color;
+    line-height: 100%;
+
     padding-left: 24px;
 
     cursor: pointer;
@@ -90,6 +95,13 @@
 
     &:focus {
       box-shadow: 0 0 5px inset;
+    }
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus {
+      -webkit-text-fill-color: #687480;
+      transition: background-color 5000s ease-in-out 0s;
     }
   }
 
