made minor fixes

--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -70,6 +70,8 @@
     justify-content: flex-start;
     align-items: flex-end;
 
+    width: fit-content;
+
     margin: 15px 0 0;
 
     font-size: 28px;
@@ -78,6 +80,7 @@
     line-height: 100%;
 
     @include onTablet {
+      display: flex;
       justify-content: flex-start;
 
       margin-top: 32px;
@@ -94,6 +97,8 @@
 
       width: 10px;
       height: 10px;
+      min-width: 10px;
+
       background-color: $decorativeColor;
 
       transition: background-color $animationDuration;
@@ -101,8 +106,7 @@
       @include onTablet {
         width: 15px;
         height: 15px;
-
-        margin: 8px 5px;
+        min-width: 15px;
       }
     }
 
